alignment fix

--- a/src/styles/common/_layout.scss
+++ b/src/styles/common/_layout.scss
@@ -37,7 +37,7 @@ $subtext-error-margin-left: -17.5rem;
 $grid-line-height: $line-height-20;
 $grid-cell-padding-right: 1.5rem;
 $grid-cell-padding-left: 1rem;
-$grid-column-height: 3.38rem;
+$grid-column-height: 2.75rem;
 $grid-filter-top: 0.44rem;
 $grid-footer-btn-width: 1.25rem;
 $grid-container-margin-top: 0.19rem;
