--- a/src/styles/common/_mixins.scss
+++ b/src/styles/common/_mixins.scss
@@ -50,9 +50,9 @@
     font-weight: $font-weight-regular;
     font-size: $grid-font-size-default;
     color: $grid-text-default-color;
-    height: 46px;
+    min-height: 46px;
+    line-height: $grid-line-height;
     padding-right: $grid-cell-padding-right;
-    padding-left: $grid-cell-padding-left;
 }
 
 // Mixin to create buttons in different sizes, it accepts width and height
